2005-11-14  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Historical records): Clarify wording, based on
	feedback from Daniel Phillips.

2005-11-13  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Automation): Document sort order for 'automate
	select'.

2005-11-10  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Hooks): Small correction so the text matches the
	example.

2005-11-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* lua.cc, std_hooks.lua, monotone.texi: basic_io parser for lua is
	now called parse_basic_io

2005-11-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* monotone.texi: document parse_basicio in the
	"Additional Lua Functions" section

2005-11-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* testsuite.at: Several MINHOOKS_* macros that use the standard hooks
	and only load predefined hooks about passphrase and rng.
	* tests/t_netsync_permissions, tests/t_netsync_read_permissions: use
	the standard permission hooks and define {read,write}-permissions files.
	Check both the permissions mechanism and the standard hooks at once.

2005-11-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* monotone.texi: update example project with latest read-permissions
	format. Mention comment lines in the description in the hooks section

2005-11-08  Timothy Brownawell  <tbrownaw@gmail.com>

	Make a basic_io parser available to Lua.
	* lua.cc: new function, monotone_parse_basicio_for_lua
	* std_hooks.lua: use it in get_netsync_read_permitted

2005-11-05  Timothy Brownawell  <tbrownaw@gmail.com>

	Make sure that all new revisions added to the db deltify as much as
	possible.
	* commands.cc, diff_patch.cc: deltify both sides when doing a merge
	* database.{cc,hh}: new function, database::deltify_revision()
	call it from put_revision, so all new revisions will be deltified

2005-10-30  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua (edit_comment): Insert a blank line if there is no
	user log message, so the user doesn't have to.
