@@ -49,3 +49,4 @@
 #define OPT_UNKNOWN 40
 #define OPT_KEY_TO_PUSH 41
 #define OPT_CONF_DIR 42
+#define OPT_NEW_DB 43
